updated HTML to have correct spacing of divs

--- a/styles.css
+++ b/styles.css
@@ -21,21 +21,26 @@ body{
 .container {
     width: 100%;
     height: 100vh;
+    display: flex;
 }
 
 .leftpane {
     width: 65%;
-    height: 100vh;
+    height: 100%;
+    display: inline-block;
 }
 
 .rightpane {
+    float: auto;
     width: 35%;
-    height: 100vh;
+    height: 100%;
 }
 
-.d-flex {
+/* .d-flex {
     display: flex;
-}
+    height: 100%;
+    width:  100%;
+} */
 
 h1 {
     color: #444444;
@@ -53,21 +58,30 @@ h3 {
 p {
     font-size: 14px;
     color: #888;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
-.button { 
+img {
+    background-color: #c66b0a;
+    width : 98%;
+    height: auto;
+    display: block;
+    margin: auto;
+}
+
+.button {
     border: none; 
     color: gray; 
-    height: 150px; 
-    width: 150px; 
+    height: 15%; 
+    width: 90%;
     text-align: center; 
-    text-decoration: none; 
-    display: inline-block; 
-    font-size: 16px; 
-    margin: 4px 2px; 
-    cursor: pointer; 
-    border-radius: 50px;
+    text-decoration: none;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    display: block;
 }
 
 .button:hover { 
@@ -81,49 +95,38 @@ p {
     transform: translateY(4px);
 }
 
-.row {
-    display: flex;
-    flex-direction:row;
-}
-
-.column {
-    flex: 1 1 0px;
-}
-
-.column-member {
-    display: flex;
-    text-align: center;
-}
-
 .grocery-list {
+    margin: auto;
     background-color: #58595B;
-    padding: 10px;
     text-align: center;
     border-radius: 20px;
-    height: 600px;
-    width: 400px;
+    height: 75%;
+    width: 80%;
 }
 
 .live-feed-window {
     margin: auto;
     background-color: #58595B;
-    padding: 10px;
     text-align: center;
     border-radius: 20px;
-    height: 600px;
+    height: 75%;
     width: 80%;
 }
 
 .live-feed {
     width: 75%;
     float: left;
-    /* height: 100vh; */
+    height: 90%;
+    display:flex;
 }
 
 .button-panel {
     width: 25%;
-    float: left;
-    /* height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 90%;
 }
 
 /* Include the padding and border in an element's total width and height */
@@ -134,7 +137,7 @@ p {
 /* Remove margins and padding from the list */
 ul {
     margin: auto;
-    height: 300px;
+    height: 60%;
     width: 60%;
     padding: 10px;
     border-radius: 20px;
